--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>Red King Rent Car</title>
   <link rel="stylesheet" href="./style.css">
+  
+  <link rel = "icon" href = 
+"https://i.imgur.com/De62tCV.png" 
+  type = "image/x-icon">
 
 </head>
 <body>
