--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <title>Red King Rent Car</title>
   <link rel="stylesheet" href="./style.css">
 
-
   <link rel = "icon" href = 
 "Images/icon.png" 
   type = "image/x-icon">
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <!-- partial:index.partial.html -->
