--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <title>Red King Rent Car</title>
   <link rel="stylesheet" href="./style.css">
 
+
   <link rel = "icon" href = 
 "Images/icon.png" 
   type = "image/x-icon">
-  
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -89,7 +90,7 @@
        <div class="product" id="camry14">
          <div class="level"> Camry 2014</div>
          <img src="Images/camry-2014.jpg">
-         <h2> USD$ 55 p/Day</h2>
+         <h2> USD$ 70 p/Day</h2>
          <form action="https://wa.me/18296720149?text=im%20interested%20on%20renting%20a%20car">
           <input type="submit"
                  id="submit"
@@ -172,9 +173,9 @@
       </div>
       
       <ul>
-        <li><a href="https://wa.me/18296720149?text=im%20interested%20on%20renting%20a%20car" target="_blank">Whatsapp</a></li>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Instagram</a></li>
+        <li><a href="https://wa.me/18296720149?text=im%20interested%20on%20renting%20a%20car" target="_blank"><img src="Images/ws.png" width="30" alt="Whatsapp"></a></li>
+        <li><a href="#" target="_blank"><img src="Images/fb.png" width="30" alt="Facebook"></a></li>
+        <li><a href="#" target="_blank"><img src="Images/instagram.png" width="30" alt="Instagram"></a></li>
       </ul>
       
 
