--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
          <div class="level">Kia k5 white</div>
          <img src="Images/Kiak5Blanco.jpg">
          <h2> USD$ 50 p/Day</h2>
-         <form action="https://api.whatsapp.com/send/?phone=18293320110&text=im+interested+on+renting+a+car&app_absent=0">
+         <form action="https://wa.me/18293320110">
           <input type="submit"
                  id="submit"
                  value="Order now!"
@@ -91,7 +91,7 @@
          <div class="level"> Camry 2014</div>
          <img src="Images/camry-2014.jpg">
          <h2> USD$ 70 p/Day</h2>
-         <form action="https://api.whatsapp.com/send/?phone=18293320110&text=im+interested+on+renting+a+car&app_absent=0">
+         <form action="https://wa.me/18293320110">
           <input type="submit"
                  id="submit"
                  value="Order now!"
@@ -105,7 +105,7 @@
 
          <img src="Images/kia-grey.jpg">
          <h2> USD$ 50 p/Day</h2>
-         <form action="https://api.whatsapp.com/send/?phone=18293320110&text=im+interested+on+renting+a+car&app_absent=0">
+         <form action="https://wa.me/18293320110">
           <input type="submit"
                  id="submit"
                  value="Order now!"
@@ -121,7 +121,7 @@
         <p><strong>Minimun of 7 days rent required to get this car.</strong></p> 
             
          <h2> USD$ 150 p/Day</h2>
-         <form action="https://api.whatsapp.com/send/?phone=18293320110&text=im+interested+on+renting+a+car&app_absent=0">
+         <form action="https://wa.me/18293320110">
            <input type="submit"
                   id="submit"
                   value="Order now!"
@@ -137,7 +137,7 @@
           <h2>Get Best Offer's in no time.</h2>
 
         <form id="form"
-              action="https://api.whatsapp.com/send/?phone=18293320110&text=im+interested+on+renting+a+car&app_absent=0"
+              action="https://wa.me/18293320110"
               >
           <input 
                    name="email"
