--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
           bavaro friusa<br> 
           Av.España<br>
           Postal 23000<br>
-          Dominican Republic
+          Dominican Republic<br>
+          &#169;2022 RP all rights reserved.
         </p>
       </div>
      
