--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     
     
     <section id="form-section">
-          <h2>Get Best Offer's in no time.</h2>
+          <h2>Get the latest Updates from red king</h2>
 
         <form id="form"
               action="https://wa.me/18293320110"
