--- a/index.html
+++ b/index.html
@@ -20,15 +20,25 @@
     <div id="logo">
       
       <!--Media query to execute logo image based on browser dark or white mode-->
-     <picture>
-      <source
-        srcset="dark.png"
-        media="(prefers-color-scheme: white)">
-      <img id="header-img" src="Images/rent-car-logo.png">
-    </picture>
+        <picture>
+          <source
+            srcset="dark.png"
+            media="(prefers-color-scheme: white)">
+          <img id="header-img" src="Images/rent-car-logo.png">
+        </picture>
       <!--Ends here-->
-      
     </div>
+
+    <div class="dropdown">
+      <button onclick="myFunction()" class="dropbtn">Menu</button>
+      <div id="myDropdown" class="dropdown-content">
+        <a class="nav-link" href="">Home</a>
+        <a class="nav-link" href="#footer">Contact Us</a>
+        <a class="nav-link" href="#pricess"> Cars & Prices</a>
+        <a class="nav-link" href="#footer">Location</a>
+      </div>
+    </div>
+
     <div>
       <nav id="nav-bar">
         <ul>
@@ -186,6 +196,26 @@
   </div>
 </div>
 <!-- partial -->
+<script>
+  function myFunction(){
+    document.getElementById("myDropdown").classList.toggle("show");
+  }
 
+  window.onclick = function(event) {
+    if (!event.target.matches('.dropbtn')) {
+      var dropdowns = document.getElementsByClassName("dropdown-content");
+      var i;
+
+      for(i=0; i<dropdowns.length; i++) {
+        var openDropdown = dropdowns[i];
+        if(openDropdown.classList.contains('show')){
+          openDropdown.classList.remove('show');
+        }
+
+      }
+    }
+  }
+
+</script>
 </body>
 </html>
