--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="dropdown">
       <button onclick="myFunction()" class="dropbtn">Menu</button>
       <div id="myDropdown" class="dropdown-content">
-        <a class="nav-link" href="">Home</a>
+        <a class="nav-link" href="#section1">Home</a>
         <a class="nav-link" href="#footer">Contact Us</a>
         <a class="nav-link" href="#pricess"> Cars & Prices</a>
         <a class="nav-link" href="#footer">Location</a>
