--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="content-grid" >
           <!--content-->
           <h2 style="margin:0;padding:0;">Budget Saving</h2>
-          <p1 style="font-size:15px;font-weight:400;">We rent cars cheaper than the current market to keep our cars on the road. Take adventage of this oportunity!</p1>
+          <p1 style="font-size:15px;font-weight:400;">We rent cars cheaper than the current market to keep them on the road. Take adventage of this oportunity!</p1>
         </div>
       </div>
       
