--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
   </header>
 
   <section id="section1">
-    <h2>Get the best Car Ever <br> With the Best Punta Cana's Rent Car</h2>
+    <h1>Get the best Car Ever</h1>
+    <p>with the best punta cana's rent car</p>
 
   </section>
 
