--- a/index.html
+++ b/index.html
@@ -181,8 +181,24 @@
            />
          </form>
        </div>
+
      </section>
     
+     <!--This is the cars section 2-->
+     <section id="Cars">
+        <div class="product" id="kiak5">
+          <div class="level">Yeep renegade 2022</div>
+          <img class="renegade" src="Images/jeep-2022.jpeg">
+          <h2> USD$ 90 p/Day</h2>
+          <form action="https://wa.me/18293320110">
+          <input type="submit"
+                  id="submit"
+                  value="Order now!"
+                  class="btn"
+                  target="_blank"
+          />
+        </div>
+    </section>
     
     <section id="form-section">
           <h2>Get the latest Updates from red king</h2>
