--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                   class="btn"
                   target="_blank"
           />
+        </form>
         </div>
     </section>
     
