--- a/index.html
+++ b/index.html
@@ -189,7 +189,21 @@
         <div class="product" id="kiak5">
           <div class="level">Yeep renegade 2022</div>
           <img class="renegade" src="Images/jeep-2022.jpeg">
-          <h2> USD$ 90 p/Day</h2>
+          <h2> USD$ 70 p/Day</h2>
+          <form action="https://wa.me/18293320110">
+          <input type="submit"
+                  id="submit"
+                  value="Order now!"
+                  class="btn"
+                  target="_blank"
+          />
+        </form>
+        </div>
+
+        <div class="product" id="kiak5">
+          <div class="level">Kia Picanto 2022</div>
+          <img class="renegade" src="Images/kiapicanto.jpg">
+          <h2> USD$ 50 p/Day</h2>
           <form action="https://wa.me/18293320110">
           <input type="submit"
                   id="submit"
